js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/method-fn-call-expression-this.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
m
(
)
{
function
fn
(
)
{
(
(
)
=
>
this
)
(
)
.
#
x
}
}
}
;
